Little work on new connection system, Fixed blocks being easy to break (creative mode oversight :P)

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -69,6 +69,8 @@ tile.icbm:portableLauncher.container.invaliddistance=Target distance needs to be
 
 tile.icbm:missileController.name=Launcher Controller
 
+tile.icbm:standardlauncher.name=Standard Launcher
+
 tile.icbm:smallsilo.name=Small Silo
 tile.icbm:smallsilo.info=3 blocks tall , Loads small missiles
 tile.icbm:smallSilo.container.name=Small Silo Screen
