--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -55,6 +55,7 @@ item.icbm:explosiveItem.AntiPlant.name=Plant Killer Charge
 item.icbm:explosiveItem.PlantLife.name=Plant Life Charge
 item.icbm:explosiveItem.Regen.name=Regen Charge
 item.icbm:explosiveItem.RegenLocal.name=Limited Regen Charge
+item.icbm:explosiveItem.Cake.name=Cake Package
 
 item.icbm:explosiveItem.fragment.arrow.name=Arrow Bundle Charge
 item.icbm:explosiveItem.fragment.cobblestone.name=Cobblestone Frag Charge
@@ -131,6 +132,7 @@ explosive.icbm:ThaumNode.name=Node Dispenser
 explosive.icbm:ThaumJar.name=Node Trapper
 explosive.icbm:MicroQuake.name=Micro Quake
 explosive.icbm:Regen.name=Regen
+explosive.icbm:Cake.name=Cake
 
 ## Damage
 damage.fragment.cobblestone=%s was stoned to death by cobble fragments
