--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -123,6 +123,10 @@ tile.icbm:launcherPart.0.name=Launcher Computer
 
 tile.icbm:launcherFrame.0.name=Launcher Frame
 
+tile.icbm:commandController.name=Silo Command Controller
+tile.icbm:commandSiloDisplay.name=Silo Command Display
+tile.icbm:siloWirelessDataPoint.name=Silo Command Connector
+
 ## Explosives
 explosive.error.null_ex.name=Empty
 explosive.icbm:tnt.name=TNT
