Fixed null showing up in silo settings, Fixed frame localization, Trimmed silo name in command silo display gui

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -124,7 +124,7 @@ tile.icbm:decorLaunchPad.8.name=Center
 tile.icbm:launcherPart.name=Launcher Part
 tile.icbm:launcherPart.0.name=Launcher Computer
 
-tile.icbm:launcherFrame.0.name=Launcher Frame
+tile.icbm:launcherFrame.name=Launcher Frame
 
 tile.icbm:commandController.name=Silo Command Controller
 tile.icbm:commandSiloDisplay.name=Silo Command Display
