Implemented ore puller explosive which pulls all ore to the surface in range of the blast

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -60,6 +60,7 @@ item.icbm:explosiveItem.Regen.name=Regen Charge
 item.icbm:explosiveItem.RegenLocal.name=Limited Regen Charge
 item.icbm:explosiveItem.BiomeChange.name=Biome Shift Charge
 item.icbm:explosiveItem.Cake.name=Cake Package
+item.icbm:explosiveItem.OrePuller.name=Ore Up Draft Charge
 
 item.icbm:explosiveItem.fragment.arrow.name=Arrow Bundle Charge
 item.icbm:explosiveItem.fragment.cobblestone.name=Cobblestone Frag Charge
@@ -154,6 +155,7 @@ explosive.icbm:Regen.name=Regen
 explosive.icbm:RegenLocal.name=Limited Regen
 explosive.icbm:cake.name=Cake
 explosive.icbm:biomeChange.name=Biome Shift
+explosive.icbm:OrePuller.name=Ore Up Draft
 
 ## Damage
 damage.fragment.cobblestone=%s was stoned to death by cobble fragments
