--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -75,6 +75,7 @@ item.icbm:explosiveItem.Cake.name=Cake Package
 item.icbm:explosiveItem.OrePuller.name=Ore Up Draft Charge
 item.icbm:explosiveItem.Emp.name=Emp Battery
 item.icbm:explosiveItem.SlimeRain.name=Royal Slime
+item.icbm:explosiveItem.Gravity.name=Anti-Gravity Device
 
 item.icbm:explosiveItem.fragment.arrow.name=Arrow Bundle Charge
 item.icbm:explosiveItem.fragment.cobblestone.name=Cobblestone Frag Charge
@@ -162,6 +163,10 @@ tile.icbm:commandController.name=Silo Command Controller
 tile.icbm:commandSiloDisplay.name=Silo Command Display
 tile.icbm:siloWirelessDataPoint.name=Silo Command Connector
 
+tile.icbm:warheadStation.name=Warhead Station
+tile.icbm:missileStation.name=Missile Assembly Table
+tile.icbm:missileAutoStation.name=Missile Station
+
 ## Explosives
 explosive.error.null_ex.name=Empty
 explosive.icbm:tnt.name=TNT
@@ -188,6 +193,7 @@ explosive.icbm:biomeChange.name=Biome Shift
 explosive.icbm:OrePuller.name=Ore Up Draft
 explosive.icbm:Emp.name=Universal EMP
 explosive.icbm:SlimeRain.name=Slime Rain
+explosive.icbm:Gravity.name=Anti-Gravity
 
 ## Damage
 damage.fragment.cobblestone=%s was stoned to death by cobble fragments
