--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -80,6 +80,7 @@ item.icbm:explosiveItem.OrePuller.name=Ore Up Draft Charge
 item.icbm:explosiveItem.Emp.name=Emp Battery
 item.icbm:explosiveItem.SlimeRain.name=Royal Slime Jar
 item.icbm:explosiveItem.Gravity.name=Anti-Gravity Device
+item.icbm:explosiveItem.Microwave.name=Microwave Generator
 
 item.icbm:explosiveItem.fragment.arrow.name=Arrow Bundle Charge
 item.icbm:explosiveItem.fragment.cobblestone.name=Cobblestone Frag Charge
@@ -108,6 +109,7 @@ item.icbm:explosiveItem.OrePuller.info=Uses endermen to teleport ore
 item.icbm:explosiveItem.Emp.info=Generates an EMP pulse
 item.icbm:explosiveItem.SlimeRain.info=Summons the slimes
 item.icbm:explosiveItem.Gravity.info=Reverses gravity in a local area
+item.icbm:explosiveItem.Microwave.info=Converts water into steam,Sets entities on fire,Instant Effect,May cause lag for large sizes
 
 ## Explosive Items --- Tooltips -- Biome Change
 item.icbm:explosiveItem.BiomeChange.info=Changes the biome ID
@@ -242,6 +244,7 @@ explosive.icbm:OrePuller.name=Ore Up Draft
 explosive.icbm:Emp.name=Universal EMP
 explosive.icbm:SlimeRain.name=Slime Rain
 explosive.icbm:Gravity.name=Anti-Gravity
+explosive.icbm:Microwave.name=Microwave
 
 ## Damage
 damage.fragment.cobblestone=%s was stoned to death by cobble fragments
